enumcapsulate/tests/derive-tests/as_variant_mut/fail/union.err.txt
error: Only enums can use this derive
 --> /tests/derive-tests/as_variant_mut/fail/union.rs:4:11
  |
4 | pub union Union {
  |           ^^^^^
